<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_grey" >

    <RelativeLayout
        android:id="@+id/relati_make_phone_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:background="@drawable/cellmicroblog_popupmenu_item"
        android:paddingBottom="2dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="2dip" >

        <TextView
            android:id="@+id/tv_make_phone_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:lines="1"
            android:text="@string/cellmicroblog_make_phone_call"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relati_make_video_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relati_make_phone_call"
        android:layout_marginTop="2dip"
        android:background="@drawable/cellmicroblog_popupmenu_item"
        android:paddingBottom="2dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="2dip" >

        <TextView
            android:id="@+id/tv_make_video_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:lines="1"
            android:text="@string/cellmicroblog_make_video_call"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relati_send_instant_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relati_make_video_call"
        android:layout_marginTop="2dip"
        android:background="@drawable/cellmicroblog_popupmenu_item"
        android:paddingBottom="2dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="2dip" >

        <TextView
            android:id="@+id/tv_send_instant_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:lines="1"
            android:text="@string/cellmicroblog_send_instant_msg"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relati_send_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relati_send_instant_msg"
        android:layout_marginTop="2dip"
        android:background="@drawable/cellmicroblog_popupmenu_item"
        android:paddingBottom="2dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="2dip" >

        <TextView
            android:id="@+id/tv_send_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:lines="1"
            android:text="@string/cellmicroblog_send_email"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relati_item_split_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relati_send_email"
        android:layout_marginTop="2dip"
        android:paddingBottom="2dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="2dip" >

        <TextView
            android:id="@+id/tv_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/cellmicroblog_item_split_line"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relati_add_as_friend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relati_item_split_line"
        android:layout_marginTop="2dip"
        android:background="@drawable/cellmicroblog_popupmenu_item"
        android:paddingBottom="10dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="2dip" >

        <TextView
            android:id="@+id/tv_add_as_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/cellmicroblog_add_as_friend"
            android:textSize="18sp" />
    </RelativeLayout>

</RelativeLayout>